edits to Read 31

--- a/read31_401.md
+++ b/read31_401.md
@@ -8,19 +8,13 @@ React Context provides you with a way to pass props through your app without hav
 You might use Context when applying a themed user interface to your application.
 
 3. Why should we use it sparingly?
-It would seem that because Context shares data globally, it should be used sparingly to avoid unintentional collisions; however, this is not what the reading indicates. Rather, the reading indicates that Context "makes component reuse more difficult". I will have to play around with it to fully understand why that is. 
+The reading indicates that Context "makes component reuse more difficult". I will have to play around with it to fully understand why that is. 
 
 [Awesome React Context links](https://github.com/diegohaz/awesome-react-context)
 
-1. Consume content from (at least) two of the Awesome React Context links. Share your take-away from each:
-
-  * Takeaway 1: 
-
-
-
-  * Takeaway 2:
-
-
-`Things I'd like to know more about:`
-
-stuff
+  * Takeaways  
+    * Context is present in React >= 16.3 contains Context so no special installs are needed
+    * "Calling the factory function `React.createContext()` will return us an object that has a “Provider” and a “Consumer” in it."
+    * Provider feeds all it's sub-components
+    * Consumer _"must have access to the same Context component"_
+    *  [example usage](https://www.youtube.com/watch?v=WhWqy-vxKS8):  const MyContext = React.createContext("Hello"); 
