Read 32 ready for canvas submission

--- a/read32_401.md
+++ b/read32_401.md
@@ -1,14 +1,10 @@
 ## Topic
-[]()
+[Context API - Behaviors](https://react.dev/learn/scaling-up-with-reducer-and-context)
 
-1. 
+1. How do useReducer and useContext work together to simplify state management in a React application? (At least two paragraphs of prose.)
 
-### Reflection
+A reducer is a (pure) function that takes in two things (state and an action) and reduce it down to one thing (an updated state) which is this function's return. This type of function allows a dev to consolidate all the state update logic more concisely than would otherwise be possible. `useReducer` is a hook that takes as arguments a reducer function and an action and returns an array that holds the new current state and a dispatch function.  
 
-1. What are your learning goals after reading and reviewing the [class README]()?
+The `useContext` hook allows state to be pulled from a top-level Provider to relevant components via Consumers rather than necessitating that props be passed down through components where they are not needed. 
 
-dunno
-
-`Things I'd like to know more about:`
-
-stuff
+So combining `useReducer` and `userContext` allow for cleaner, more deliberate coding and state management. 
