Read 33 Ready for Canvas Submission

--- a/read33_401.md
+++ b/read33_401.md
@@ -1,14 +1,36 @@
-## Topic
-[]()
+## `<Login />` and `<Auth />`
 
-1. 
+[What is Role Based Access Control (RBAC)?](https://digitalguardian.com/blog/what-role-based-access-control-rbac-examples-benefits-and-more)
 
-### Reflection
+1. What is Role Based Access Control (RBAC)?
 
-1. What are your learning goals after reading and reviewing the [class README]()?
+RBAC is the concept of the members of an organization having digital access only to those things on the organizations network that are relevant to and granted by their role within the organization. For example, a member of janitorial staff would not need, or as a result of that lack of need, have access to files related to the organizations marketing projections; similarly your marketing execs would not need or have access to maintenance vendor agreements and schedules. By being discerning in the granting of access rights, the organization can better avoid and/or mitigate breach risks.
 
-dunno
+2. Share an example of RBAC including all possible CRUD operations and correlating roles.
+
+Janice is a contract negotiation specialist within the Supply Chain Management group at XYZ Corp. Her network access allows her to make edits to contracts that are being actively negotiated so that the latest version is always on record. With her access she can view, download, and copy finalized contracts but she cannot create a new draft (an operation restricted to her manager) nor can she change the status of an in-progress agreement to final as that operation can only be done by a senior manager of the legal team. Contracts can only be deleted from the system by the IT deparatment in accordance with documentation retention requirements of various regulatory agencies and the company's legal policies.
+
+3. What are the Benefits of RBAC?
+
+Per the article, three prime advantages of RBAC include:
+* Reducing administratinve work and IT support
+* Maximizing operation efficiency; and
+* Improving compliance
+
+Compare and Contrast the following two Libraries and the following questions. Yes, they are similarly named.
+* [react-cookie library](https://www.npmjs.com/package/react-cookie)
+* [react-cookies component](https://www.npmjs.com/package/react-cookies)
+
+1. Describe some `react-cookie` features.
+Will have to come back to this as I'm having trouble wading through the documentation. 
+
+2. Describe some `react-cookies` features.
+Will have to come back to this as I'm having trouble wading through the documentation.
+
+3. Which library would you prefer would you prefer? Why?
+
+I do not yet possess the requisite understanding to have a true preference; however, just perusing the documentation I *think* react-cookie may be where my preference lands. This is primarily because I'm recognizing some syntax and concepts that I was studying earlier today as relates to functional programming.
 
 `Things I'd like to know more about:`
 
-stuff
+Broad strokes implementation of the above.
