updates to Read 33

--- a/read33_401.md
+++ b/read33_401.md
@@ -22,10 +22,14 @@ Compare and Contrast the following two Libraries and the following questions. Ye
 * [react-cookies component](https://www.npmjs.com/package/react-cookies)
 
 1. Describe some `react-cookie` features.
-Will have to come back to this as I'm having trouble wading through the documentation. 
+
+* Server-side rendering (SSR) support
+_Attribution: Directly quoted from Ethan Luxton's Submission._
 
 2. Describe some `react-cookies` features.
-Will have to come back to this as I'm having trouble wading through the documentation.
+
+* Isomorphic support (works on both client and server side)
+_Attribution: Directly quoted from Ethan Luxton's Submission._
 
 3. Which library would you prefer would you prefer? Why?
 
