Read 34 ready for canvas submission

--- a/read34_401.md
+++ b/read34_401.md
@@ -11,32 +11,37 @@ _"While query parameters describe how to look, path parameters show your program
 _"The path parameter is separated from the URL by a `/`, and from the query parameter(s) by a question mark (`?`)."_
 
   1. Domain: `http://our-site.com`
-
-    http://our-site.com/{id}    -- the id must be replaced with an actual value
-
   2. `v3`
-
-    
-
   3. model name: `stuff`
-
-
   4. id: `things`
 
+  * Our API URL would be: `http://our-site.com/v3/stuff/?id=things`
 
 3. We have created a dynamic API with an "interface". Describe how that interface works to a non-technical friend. 
-
+I'm not exactly sure which interface is being referred to by the question. An API is an interface that facilitates communication between your code and an external resource but we are also working with a graphical interface that facilitates communication between the user and the code (and thereby the API). This would be the web page which presents the user with fields for entering information buttons that allow actions to be taken.
 
 [Review Auth Server Build](https://codefellows.github.io/code-401-javascript-guide/curriculum/apps-and-libraries/auth-server/)
 
 1. Describe how you would use middleware to implement basic and bearer auth.
-
+An express server is a middleware framework that works by facilitating a collection of function calls to implement a program. In this case the function calls run the authorization commands.
 
 2. Describe the handshake necessary to implement OAuth.
-
+From my 301 Reading Notes:
+The first website connects to the second website on behalf of the user, using OAuth, providing the user’s verified identity.
+The second site generates a one-time token and a one-time secret unique to the transaction and parties involved.
+The first site gives this token and secret to the initiating user’s client software.
+The client’s software presents the request token and secret to their authorization provider (which may or may not be the second site).
+If not already authenticated to the authorization provider, the client may be asked to authenticate. After authentication, the client is asked to approve the authorization transaction to the second website.
+The user approves (or their software silently approves) a particular transaction type at the first website.
+The user is given an approved access token (notice it’s no longer a request token).
+The user gives the approved access token to the first website.
+The first website gives the access token to the second website as proof of authentication on behalf of the user.
+The second website lets the first website access their site on behalf of the user.
+The user sees a successfully completed transaction occurring.
 
 3. Describe how Role Based Access Control works to a non-technical friend.
-
+RBAC works by restricting a users network access to just those areas the user needs to perform their expected function. For example, a bank teller does not need access to the capital management legal documentation that an investment banker needs and so would not have access to it within the organizations network. The teller would have access to areas of the network needed to complete the tasks necessitated by someone in the role of "bank teller".
 
 
 `Things I'd like to know more about:`
+More personally interesting applications of this tech.
