Ready for canvas submission

--- a/read36_401.md
+++ b/read36_401.md
@@ -4,11 +4,21 @@
 
 1. What is the first principle of Redux?
 
+ The first principle of redux is that everything that changes in the app is represented as a single object that is called the state or the "state tree". The second principal indicates that this state or "state tree" is read only and can only be changed by dispatching an action which is a plain JS object describing what changed.
+
 2. What is a store and what do we use our reducers for within that store?
+
+A store is a collection of state accumulated outside of any particular component of the app but that can be interacted with via the Reducer which takes in current state, an action that has been dispatched to it, and returns the next state.
 
 3. Name three Redux store methods given to us by createStore and describe their use.
 
+* useSelector (): _"Allows you to extract data from the Redux store state, using a selector function." -[source](https://react-redux.js.org/api/hooks)
+* useDispatch(): _"This hook returns a reference to the `dispatch` function from the Redux store. You may use it to dispatch actions as needed."_ -[source](https://react-redux.js.org/api/hooks)
+* useStore(): _"returns a reference to the same Redux store that was passed in to the `<Provider>` component."_ -[source](https://react-redux.js.org/api/hooks)
+
 4. Explain to a non-technical recruiter what combineReducers() does and why it is useful.
+
+The combineReducers method does just what it sounds like; if you have multiple reducing functions handling various aspects of store you can combine them into a single Reducer function and pass just that one combined function into the store. This will result in cleaner code.
 
 ### Bookmark and Review
 
