Read 38 ready for canvas submission

--- a/read38_401.md
+++ b/read38_401.md
@@ -1,28 +1,38 @@
 ## Redux - Asynchronous Actions
 
-Coming soon.
-
-<!--
-
 [async actions](https://redux.js.org/advanced/asyncactions)
 
 1. Why use Redux middleware?
 
+Redux is built on pure reducer functions. This means that the functions cannot generate side effects or do ANYTHING other than return a direct result of the input arguments and this is an exceedingly limiting feature of the library. Redux middleware was designed to compensate for this limitation and provide an avenue for developers to DO ALL THE THINGS that are not permitted within reducers.
+
 2. Consider the Redux Async Data Flow Diagram. Describe the flow in your own words.
 
+An event triggers a thunk action to be dispatched which the middleware takes in as an argument and uses it to make an API request. Once the response is received the middleware dispatches an action to the store reducer which returns a new state. That state either loops back to the reducer or is passed on to the UI which updates and awaits another trigger event to start the loop again.
+
 3. How are we accommodating async in our Redux app?
+
+We are accommodating async in our Redux app with the "Thunk" middleware. 
 
 [thunk middleware](https://github.com/reduxjs/redux-thunk)
 1. Why would you need redux-thunk middleware?
 
-2. Redux Thunk middleware allows you to write action creators that return a ____ instead of an action.
+You would need this middleware if you were building or working with a pre-existing Redux app and needed to implement some asynchronous behaviours within the code. _"Thunk middleware for Redux. It allows writing functions with logic inside that can interact with a Redux store's `dispatch` and `getState` methods."_
+
+2. Redux Thunk middleware allows you to write action creators that return **_a function, whether "to perform asynchronous dispatch" or "conditional dispatch"_** instead of an action.
 
 3. Describe how any return value from the inner thunk function will be made available.
+
+_"Any return value from the inner function will be available as the return value of dispatch itself."_
 
 
 ### Reflection
 
+
 1. What are your learning goals after reading and reviewing the [class README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-38/)?
 
+To really understand why one would use this library over other options. It seems at this early stage overly complicated.
 
 `Things I'd like to know more about:`
+
+I'm still working through some of the earlier Redux features so not much of interest here for me -at least not yet.
