Read 39 ready for canvas submission

--- a/read39_401.md
+++ b/read39_401.md
@@ -1,27 +1,45 @@
 ## Redux - Additional Topics
 
-Coming soon.
-
-<!--
-
 [Redux Toolkit (RTK)](https://redux-toolkit.js.org/introduction/getting-started)
 
 1. What concerns are addressed by Redux Toolkit?
+  
+   * overly complicated store configuration
+   * excessive package installation requirements
+   * excessive boilerplate code requirements 
 
 2. What does `configureStore()` do?
 
+  _"wraps `createStore` to provide simplified configuration options and good defaults. It can automatically combine your slice reducers, adds whatever Redux middleware you supply, includes `redux-thunk` by default, and enables use of the Redux DevTools Extension."_
+
 3. How would I use `createSlice()`?
+
+_"`createSlice()` accepts an object of reducer functions, a slice name, and an initial state value, and automatically generates a slice reducer with corresponding action creators and action types."_
+
+[An Example Usage:](https://redux-toolkit.js.org/api/createSlice)
+![createSlice](/read39createSlice.JPG)
 
 [MobX](https://mobx.js.org/getting-started.html)
 1. What is Mobx?
 
+  _"MobX is a simple, scalable and battle tested state management solution... [ it] is a standalone library, but most people are using it with React..."_
+
 2. How does MobX make it “impossible” to produce an inconsistent state?
 
+MobX makes it impossible to produce an inconsistent state by making all state changes automatic derivations based on an initial application state.
+
 3. How would we build a reactive user interface?
+
+First, we would make the properties of objects in the application "observable" so that MobX knows they (their values) can change, then we wrap the relevant constructor functions in  "autorun" which creates a reaction that runs once then automatically whenever state changes.
 
 [Tutorial](https://redux-toolkit.js.org/tutorials/intermediate-tutorial)
 1. What take-away(s) did this tutorial provide?
 
+* A primary goal for a developer should be understanding enough tools well enough to be able to select the best tool for a project to avoid excessive complexity (which can be costly)
+
+* React Hooks have only been around since about 2018
+
+* Connect is hard to use with Typescript 
 ### Bookmark & Review
 * [Redux Toolkit (RTK)](https://redux-toolkit.js.org/)
 
@@ -31,5 +49,8 @@ Coming soon.
 
 1. What are your learning goals after reading and reviewing the [class README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-39/)?
 
+My learning goals will reflect the same as those of the curriculum.
 
 `Things I'd like to know more about:`
+
+Nothing for this section yet.
