--- a/read43_401.md
+++ b/read43_401.md
@@ -17,4 +17,4 @@ These articles will help you learn more about open-source contributions.
 * Review: [Call for Code: Open Source for Good](https://callforcode.org/) _(follow the “Get started” button)_
 
 
-`Things I'd like to know more about:`
+`Things I'd like to know more about:` -->
