Read 41 ready for canvas submission

--- a/read41_401.md
+++ b/read41_401.md
@@ -1,45 +1,37 @@
-## React Native
+## PWAs and App Manifests
 
-Coming soon.
-
-<!--
-
-[getting started with react native](https://facebook.github.io/react-native/docs/getting-started)
-
-1. Name three Core Components of React Native and describe what they do.
-2. What problem does React Native solve (why call it native)?
-3. What are the building blocks of a React Native app? How does that compare to a React app?
-
-[expo](https://expo.io/)
-
-1. What solution does expo provide?
-2. Expo tries to manage as much of the complexity of building apps as possible, which is why we call it the ____ workflow.
-3. What is the difference between React Native and Expo?
-
-[expo snack](https://snack.expo.io/)
-
-1. Checkout this tool. What does snack allow you to do?
-
-[ejecting](https://docs.expo.io/versions/latest/expokit/eject)
-
-1. What does “eject” mean within the context of Expo?
-2. When should you not eject?
-3. Why might you choose to eject?
-
-## Tutorial 
-[react native basics](https://facebook.github.io/react-native/docs/tutorial)
-
-## Bookmark & Review
-[react native](https://facebook.github.io/react-native/)
+[What are PWAs](https://web.dev/what-are-pwas/)
 
 
+1. What does Progressive in Progressive Web App mean?
 
-### Reflection
+Being progressive means the app is web page that uses apis and other browser technologies and features to behave like a mobile app or desktop app. The user should be able to launch the app by clicking an icon, afterwhich the app should load instantly, run in it's own window, work offline, and allow for push notifications and auto updates. Also, as the browser adds new technologies and updates, these features roll automagically to the app.
 
-1. Looking ahead at this module’s course schedule, What do you look forward to learning?
-2. What are your learning goals after reading and reviewing the [class README](https://codefellows.github.io/code-401-javascript-guide/curriculum/class-41/)?
+2. What are three benefits of writing a progressive web app, as opposed to a native app?
 
+    * cross-platform availability
+    * single code-base regardless of access point
+    * web apps are often quicker and easier to build than a platform specific solution
 
-`Things I'd like to know more about:`
+3. What are two reasons to consider a native app, instead of a PWA?
 
--->
+    * device hardware accessibility
+    * speed and reliability
+
+[App Manifests](https://web.dev/add-manifest/)
+
+1. When a website has an app manifest, what is it able to do?
+
+The app manifest tells the browser the app's name, the icons that are relevant to it, and the url to which it should be directed. The manifest also provides an id property which allows for dependency updates, it provides display properties which controls display behaviours like splash screens, user interface styling and themes, as well as form factors for screenshots amoung other things.
+
+2. Name and describe how short_name and two other manifest properties are used.
+
+   * The short_name property is used in spaces where space is limited as well as on _"window-switching surfaces such as alt+tab, overview mode, and the shelf window list."_
+
+   * The start_url property _"is required and tells the browser where your application should start when it is launched, and prevents the app from starting on whatever page the user was on when they added your app to their home screen"_.
+
+   * _"The background_color property is used on the splash screen when the application is first launched on mobile."_  
+
+3. How does Chrome render a PWA splash screen?
+
+_"Chrome automatically creates the splash screen from the manifest properties"_
