--- a/read42_401.md
+++ b/read42_401.md
@@ -1,8 +1,5 @@
 ## Ethics in Tech
 
-Coming soon.
-<!--
-
 Review at least one article from both “Ethics in the workplace” and “Ethics in Technology” sections below and write how each of them relates to ethics in technology. Do you agree or disagree with these articles? What stuck out to you specifically from each article?
 
 For each article that you choose, write a minimum 5 sentences (1 paragraph). Each reflection should be something of substance and of an acceptable quality.
@@ -14,6 +11,13 @@ For each article that you choose, write a minimum 5 sentences (1 paragraph). Eac
 ### Ethics in the workplace
 1. [The code I’m still ashamed of](https://medium.freecodecamp.org/the-code-im-still-ashamed-of-e4c021dff55e)
 2. [Project Dragonfly, Google’s censored search engine](https://www.vox.com/2018/8/17/17704526/google-dragonfly-censored-search-engine-china)
+
+What stood out the most for me from this article is the following excerpt related to project Maven:
+
+_"About a dozen engineers ended up resigning over what they viewed as an unethical use of artificial intelligence, prompting Google to let the contract expire in June, and leading executives to promise that they would never use AI technology to harm others."_
+
+Call me a cynic, but this sentence actually made me laugh out loud. I completely agree with the engineers who resigned in disgust and applaud their efforts to not be a part of the problem. I absolutely do not believe that the executives' promise to never use AI tech to harm others holds any water whatsover. I think a more realistic outcome is that the executives learned to keep a tighter lid on potentially incendiary projects and I imagine several more NDA attorneys were brought on board to help keep internal secrets secret.
+
 3. [Amazon workers demand Jeff Bezos cancel “Recognition” software](https://gizmodo.com/amazon-workers-demand-jeff-bezos-cancel-face-recognitio-1827037509)
 4. [Google and AI](https://gizmodo.com/in-reversal-google-says-its-ai-will-not-be-used-for-we-1826649327)
 5. [Microsoft Employees demand end of ICE contract](https://web.archive.org/web/20211124172013/https://www.nytimes.com/2018/06/19/technology/tech-companies-immigration-border.html)
@@ -22,6 +26,13 @@ For each article that you choose, write a minimum 5 sentences (1 paragraph). Eac
 ### Ethics in Technology
 1. [Self Driving Car Ethics](https://www.freep.com/story/money/cars/2017/11/21/self-driving-cars-ethics/804805001/)
 2. [Ethical dilemma of self driving cars](https://www.theglobeandmail.com/globe-drive/culture/technology/the-ethical-dilemmas-of-self-drivingcars/article37803470/)
+
+_"... self-driving cars should always attempt to minimize human death and shouldn't discriminate between individuals based on age, gender or any other factor. Human lives should also always be given priority over animals or property._
+
+_More than three-quarters of participants support such a utilitarian approach, according to a 2016 study published in Science. That is, unless they happen to be in such a car, in which case the majority would want it to protect passengers – and themselves – at all costs."_
+
+The above stands out the most for me from this article and while I got a giggle out of it I can't help but to admit that I agree with it. If I'm tooling down the road with my nieces and nephews in the car, then yeah, I am not going to be fair-minded or magnanimous about prioritizing who gets the short end of the stick between those inside the car and those outside of it. I stop short and swerve for wildlife as I feel ok with taking a rear fender-bender to save a bunny, but I would take serious issue with my car calculating chances of survival and subsequently driving me and mine off road and into a river or some such. 
+
 3. [Cyber-Security of self driving cars](https://phys.org/news/2017-02-cybersecurity-self-driving-cars.html)
 4. [Big Data is our Civil Rights issue](http://solveforinteresting.com/big-data-is-our-generations-civil-rights-issue-and-we-dont-know-it/)
 5. [Will democracy survive big data and AI?](https://www.scientificamerican.com/article/will-democracy-survive-big-data-and-artificial-intelligence/)
@@ -30,7 +41,3 @@ For each article that you choose, write a minimum 5 sentences (1 paragraph). Eac
 1. [Microsoft AI Principles](https://www.microsoft.com/en-us/AI/our-approach-to-ai)
 2. [Ethical OS Toolkit](https://ethicalos.org/)
 3. [Google AI Principles](https://www.blog.google/technology/ai/ai-principles/)
-
-
-`Things I'd like to know more about:`
--->
